@@ -1,0 +1,19 @@
+% Generated by roxygen2 (4.0.2): do not edit by hand
+\docType{data}
+\name{function_words}
+\alias{function_words}
+\title{Function Words}
+\format{A vector with 321 elements}
+\usage{
+data(function_words)
+}
+\description{
+A vector of function words from
+\href{http://myweb.tiscali.co.uk/wordscape/museum/funcword.html}{John and Muriel Higgins's list}
+used for the text game ECLIPSE.
+}
+\references{
+\url{http://myweb.tiscali.co.uk/wordscape/museum/funcword.html}
+}
+\keyword{datasets}
+
