@@ -27,6 +27,8 @@ BUG FIXES
 
 NEW FEATURES
 
+* `function_words` a list of function words added from: http://myweb.tiscali.co.uk/wordscape/museum/funcword.html
+
 MINOR FEATURES
 
 IMPROVEMENTS
